test/spec_vectors/memory/ok/module_8.wat
(module (memory (data "")) (func (export "memsize") (result i32) (memory.size)))