test/spec_vectors/memory/fail/module_18.wat
(module (func (drop (memory.grow (i32.const 0)))))